<resources>
    <string name="app_name">Movies</string>
    <string name="action_settings">Settings</string>
    <string name="invitation_title">Invite friends to app</string>
    <string name="invitation_message">This app is wonderful</string>
    <string name="invitation_cta">Invite</string>
    <string name="movie_poster">Movie poster</string>
    <string name="invite_people">Invite people</string>
    <string name="title_activity_movie_details">Movie Details</string>
    <string name="release_date">Release date: %1$s</string>
    <string name="language">Language: %1$s</string>
    <string name="original_title">Original title: %1$s</string>
    <string name="_10" translatable="false">/10</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="most_popular">Most popular</string>
    <string name="highest_rated">Highest rated</string>
    <string name="starred">Starred</string>
    <string name="info">Info</string>
    <string name="video">Video</string>
    <string name="reviews">Reviews</string>
</resources>
