<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="ru.develop_for_android.movies.MovieDetailsActivity"
    tools:showIn="@layout/activity_movie_details">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:contentDescription="@null"
                android:id="@+id/imageView"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toEndOf="@+id/details_poster"
                app:layout_constraintTop_toTopOf="@+id/details_rate"
                app:srcCompat="@drawable/ic_star_bright" />

            <TextView
                android:id="@+id/details_max_rate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginStart="2dp"
                android:gravity="bottom"
                android:text="@string/_10"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="@+id/details_rate"
                app:layout_constraintStart_toEndOf="@+id/details_rate" />

            <TextView
                android:id="@+id/details_rate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:textAppearance="@android:style/TextAppearance.Material.Large"
                app:layout_constraintStart_toEndOf="@+id/imageView"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="6.6" />

            <TextView
                android:id="@+id/details_counts_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="@+id/details_max_rate"
                app:layout_constraintStart_toStartOf="@+id/details_rate"
                app:layout_constraintTop_toBottomOf="@+id/details_rate"
                tools:text="745" />

            <ImageView
                android:contentDescription="@string/movie_poster"
                android:id="@+id/details_poster"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_launcher_background" />

            <TextView
                android:id="@+id/details_release_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:text="@string/release_date"
                app:layout_constraintStart_toEndOf="@+id/details_poster"
                app:layout_constraintTop_toBottomOf="@+id/details_counts_number" />

            <TextView
                android:id="@+id/details_language"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/language"
                app:layout_constraintStart_toEndOf="@+id/details_poster"
                app:layout_constraintTop_toBottomOf="@+id/details_release_date" />

            <TextView
                android:id="@+id/details_original_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/original_title"
                app:layout_constraintStart_toEndOf="@+id/details_poster"
                app:layout_constraintTop_toBottomOf="@+id/details_language" />


        </android.support.constraint.ConstraintLayout>

        <TextView
            android:id="@+id/details_overview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            tools:text="large text" />

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>
